# fastapi_testing

./: .gitignore  README.md  main.py  pyproject.toml
backend/: auth.py  blog.db  config.py  database.py  dependencies.py  email_utils.py  image_utils.py  main.py  models.py  populate_db.py  pyproject.toml  pytest.ini  schemas.py  test_del.py
backend/alembic/: env.py
backend/alembic/versions/: 79bfb0d31454_initial_schema.py  ea49ccae447e_add_likes_to_posts.py
backend/routers/: posts.py  users.py
backend/templates/email/: password_reset.html
backend/tests/: conftest.py  test_auth.py  test_posts.py  test_users.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/app/forgot-password/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/posts/: page.tsx
frontend/src/app/profile/: page.tsx  profile.module.css
frontend/src/app/register/: page.tsx
frontend/src/app/reset-password/: layout.tsx  page.tsx
frontend/src/components/: Homepage.tsx
frontend/src/components/navbar/: Navbar.tsx  navbar.module.css
frontend/src/components/postform/: PostForm.tsx  postform.module.css
frontend/src/components/postitem/: PostItem.tsx  postitem.module.css
frontend/src/components/postlist/: PostList.tsx  postlist.module.css
frontend/src/components/sidebar/: Sidebar.tsx  sidebar.module.css
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: QueryProvider.tsx  api.ts
frontend/src/util/: authApi.ts  http.ts  mediaUrl.ts
frontend/src/util/query-hooks/: useAuthHooks.ts  (+9 more)
(+7 files in other folders)
